--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="icon" href="./logo.png" type="image/png" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
-    <title>Tap Music</title>
+    <title>Beat Maker</title>
 </head>
 <body>
     <div class="app">
         <header>
-            <h1>Tap Music</h1>
+            <h1>Beat Maker</h1>
             <p>Make music with only one tap</p>
         </header>
         <div class="visual"></div>
